objects/maps__Waypoint__c.object
<CustomObject>
    <fields>
        <fullName>maps__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Maps Waypoints</relationshipLabel>
        <relationshipName>Maps_Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__AdditionalData__c</fullName>
        <label>Additional Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__AddressFields__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Object Lookup</label>
        <referenceTo>maps__BaseObject__c</referenceTo>
        <relationshipLabel>Maps Waypoints</relationshipLabel>
        <relationshipName>Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__BaseObject__c</fullName>
        <label>Base Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Maps Waypoints</relationshipLabel>
        <relationshipName>Maps_Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Maps Waypoints</relationshipLabel>
        <relationshipName>Maps_Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__EventId__c</fullName>
        <label>EventId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__HasAddress__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Has Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__IsFlexible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Flexible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Maps Waypoints</relationshipLabel>
        <relationshipName>Maps_Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__LinkId__c</fullName>
        <label>Link Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MarkerLayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Marker Layer</label>
        <referenceTo>maps__MarkerLayer__c</referenceTo>
        <relationshipLabel>Waypoints</relationshipLabel>
        <relationshipName>Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Maps Waypoints</relationshipLabel>
        <relationshipName>Maps_Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Options__c</fullName>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Route__c</fullName>
        <label>Route</label>
        <referenceTo>maps__Route__c</referenceTo>
        <relationshipLabel>Waypoints</relationshipLabel>
        <relationshipName>Waypoints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>maps__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Maps Waypoint</label>
    <nameField>
        <label>Waypoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Waypoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>